# rcppbandicoot

./: .Rbuildignore  .gitattributes  .gitignore  DESCRIPTION  NAMESPACE  NEWS.md  README.md  cleanup  configure  configure.ac  configure.win
.github/scripts/: format-news-entry.py
.github/workflows/: R-CMD-check.yaml  upstream-update.yml
R/: RcppExports.R  flags.R.in  inline.R  rcppbandicoot-package.R
inst/: AUTHORS  CITATION  COPYRIGHTS
inst/include/: README  RcppBandicoot.h  RcppBandicootAs.h  RcppBandicootForward.h  RcppBandicootWrap.h  bandicoot
inst/include/bandicoot_bits/: BaseCube_bones.hpp  BaseCube_meat.hpp  Base_bones.hpp  Base_meat.hpp  Col_bones.hpp  Col_meat.hpp  CubeToMatOp_meat.hpp  Cube_bones.hpp  Cube_meat.hpp  GlueCube_meat.hpp  Glue_meat.hpp  MatValProxy_bones.hpp  MatValProxy_meat.hpp  Mat_bones.hpp  Mat_meat.hpp  OpCube_bones.hpp  OpCube_meat.hpp  Op_bones.hpp  Op_meat.hpp  Proxy.hpp  ProxyCast.hpp  Row_bones.hpp  Row_meat.hpp  SizeCube_meat.hpp  SizeMat_meat.hpp  SizeProxy.hpp  SizeProxyCube.hpp  alias_wrapper.hpp  cache_bones.hpp  cache_meat.hpp  cl_type.hpp  compiler_check.hpp  compiler_setup.hpp  config.hpp  config.hpp.cmake  constants.hpp  coot_backend.hpp  coot_backend_t.hpp  coot_cmath.hpp  coot_config.hpp  (+203 more)
inst/include/bandicoot_bits/cuda/: accu.hpp  all.hpp  any.hpp  approx_equal.hpp  broadcast.hpp  chol.hpp  clamp.hpp  construct_args.hpp  copy_bones.hpp  copy_meat.hpp  cross.hpp  def_cublas.hpp  def_cuda.hpp  def_nvrtc.hpp  det.hpp  dot.hpp  eig_sym.hpp  eop.hpp  extract_cx.hpp  extract_subview_elem1.hpp  extract_subview_elem2.hpp  eye.hpp  fill.hpp  find.hpp  gemm.hpp  gemv.hpp  generic_reduce_meat.hpp  index_max.hpp  index_min.hpp  join_cols.hpp  join_rows.hpp  kernel_misc.hpp  kernel_src.hpp  linspace.hpp  logspace.hpp  lu.hpp  mat_val_proxy.hpp  max.hpp  max_abs.hpp  mean.hpp  (+25 more)
inst/include/bandicoot_bits/cuda/kernels/defs/: f_defs.cu
inst/include/bandicoot_bits/cuda/kernels/oneway/: approx_equal_small.cu  fill_sve1.cu  find_first.cu  index_min_small.cu  inplace_xorwow32_randu.cu  logspace.cu  ltri_set_zero.cu  max.cu  max_small.cu  min_small.cu  radix_sort_ascending.cu  radix_sort_colwise_ascending.cu  radix_sort_colwise_desc.cu  radix_sort_colwise_descending.cu  radix_sort_descending.cu  radix_sort_index_ascending.cu  radix_sort_index_descending.cu  radix_sort_rowwise_ascending.cu  radix_sort_rowwise_descending.cu  shifted_prefix_sum_subgroups.cu  stable_radix_sort_idx_desc.cu  stable_radix_sort_index_ascending.cu  trace.cu
inst/include/bandicoot_bits/cuda/kernels/oneway_real/: rel_any_nan.cu  rel_isfinite.cu  rel_isnonfinite.cu  vec_norm_2_small.cu
inst/include/bandicoot_bits/cuda/kernels/threeway/: equ_array_hypot.cu  equ_array_mul_array.cu
inst/include/bandicoot_bits/cuda/kernels/twoway/: broadcast_minus_pre.cu  broadcast_subset_minus_post.cu  broadcast_subset_minus_pre.cu  broadcast_subset_plus.cu  broadcast_subset_schur.cu  convert_type.cu  (+37 more)
inst/include/bandicoot_bits/kernel_gen/: array_util.hpp  conv_elem_type_str.hpp  elem_type_str.hpp  elem_types.hpp  eop_inline_function.hpp  full_name.hpp  func_name_suffix.hpp  func_prefix.hpp  generator.hpp  index_to_str.hpp  isnan_str.hpp  kernel_funcs.hpp  kernel_src.hpp  kernels.hpp  logical_name.hpp  macro_bounds_check.hpp  macro_conv_elem_type.hpp  macro_defn.hpp  macro_elem_access.hpp  macro_elem_type.hpp  macro_kernel_name.hpp  macro_kernel_params.hpp  macro_kernel_push_params.hpp  macro_reduction_op.hpp  mtglue_inline_function.hpp  pointer_access.hpp  pointer_arg.hpp  post_kernel_src.hpp  pre_kernel_src.hpp  preamble.hpp  prefix.hpp  type_defs.hpp  util_strs.hpp
inst/include/bandicoot_bits/kernel_gen/cuda/: conv_elem_type_str.hpp  elem_type_str.hpp  func_prefix.hpp  isnan_str.hpp  kernels.hpp  pointer_access.hpp  pointer_arg.hpp  post_kernel_src.hpp  pre_kernel_src.hpp  preamble.hpp  type_defs.hpp
inst/include/bandicoot_bits/kernel_gen/opencl/: conv_elem_type_str.hpp  elem_type_str.hpp  func_name_suffix.hpp  isnan_str.hpp  kernels.hpp  pointer_access.hpp  pointer_arg.hpp  post_kernel_src.hpp  pre_kernel_src.hpp  preamble.hpp  type_defs.hpp
inst/include/bandicoot_bits/kernel_gen/vulkan/: conv_elem_type_str.hpp  elem_type_str.hpp  eop_inline_str.hpp  isnan_str.hpp  kernels.hpp  pointer_access.hpp  pointer_arg.hpp  post_kernel_src.hpp  pre_kernel_src.hpp  preamble.hpp  type_defs.hpp
inst/include/bandicoot_bits/opencl/: accu.hpp  all.hpp  any.hpp  approx_equal.hpp  broadcast.hpp  chol.hpp  clamp.hpp  copy_bones.hpp  copy_meat.hpp  cross.hpp  debug.hpp  def_clblas.hpp  def_clblast.hpp  det.hpp  dot.hpp  eig_sym.hpp  eop.hpp  error.hpp  extract_cx.hpp  extract_subview_elem1.hpp  extract_subview_elem2.hpp  eye.hpp  fill.hpp  find.hpp  gemm.hpp  gemv.hpp  generic_reduce_meat.hpp  generic_reduce_uword_aux_meat.hpp  index_max.hpp  index_min.hpp  join_cols.hpp  join_rows.hpp  kernel_src.hpp  kernel_utils.hpp  linspace.hpp  logspace.hpp  lu.hpp  mat_val_proxy.hpp  max.hpp  max_abs.hpp  (+28 more)
inst/include/bandicoot_bits/opencl/magma/: dgebrd.hpp  dgesvd.hpp  dlaex3.hpp  dorglq.hpp  dsytrd2.hpp  magma_support.hpp  magmablas_meat.hpp  sgebrd.hpp  sgesvd.hpp  slaex3.hpp  sorglq.hpp  ssytrd2.hpp
inst/include/bandicoot_bits/rt_common/: kernel_utils_bones.hpp  kernel_utils_meat.hpp  kernels_t.hpp
inst/include/bandicoot_bits/vulkan/: accu.hpp  all.hpp  any.hpp  approx_equal.hpp  broadcast.hpp  copy.hpp  def_vulkan.hpp  dispatch.hpp  dot.hpp  error.hpp  eye.hpp  fill.hpp  gemm.hpp  index_max.hpp  index_min.hpp  mat_val_proxy.hpp  max.hpp  min.hpp  push_constants.hpp  random.hpp  relational.hpp  reorder_cols.hpp  runtime_bones.hpp  runtime_meat.hpp  to_vk_args.hpp  trans.hpp
man/: CxxFlags.Rd  LdFlags.Rd  RcppBandicoot-package.Rd  RcppBandicootCxxFlags.Rd  RcppBandicootLdFlags.Rd  bandicoot_config.Rd  bandicoot_version.Rd  gpu_element_square.Rd  gpu_eye.Rd  gpu_matrix_add.Rd  gpu_matrix_multiply.Rd  gpu_mean.Rd  gpu_randu.Rd  gpu_sum.Rd  gpu_transpose.Rd  inlineCxxPlugin.Rd
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  RcppExports.cpp  coot.cpp  example.cpp  gpu-ops.cpp
(+419 files in other folders)
